[package]
name = "openmw_pincushion_generator"
version = "0.1.0"
edition = "2024"
description = "A tool to generate pincushion projectile NIFs for OpenMW"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
debug = false

[dependencies]
vfstool_lib  = "^0.2"
openmw-config = "^0.1"
clap = { version = "^4.5", features = ["cargo", "derive"] }

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
features = ["esp", "nif"]
